<resources>
    <string name="app_name">Story-Book</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Story Book</string>
    <string name="nav_header_subtitle">shimulgharami30000@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_exit">Exit</string>
    <string name="action_about">About Apps</string>
    <string name="t1">The Midas Touch</string>
    <string name="d1"><b><h3>\t\t\t\t\t\t\tThe Midas Touch</h3></b>\n\n  In ancient Greek, there was a king named Midas. He had a lot of gold and everything he needed. He also had a beautiful daughter. Midas loved his gold very much, but he loved his daughter more than his riches.

            One day, a satyr named Silenus got drunk and passed out in Midas’ rose garden. Believing that Satyrs always bring good luck, Midas lets Silenus rest in his palace until he is sober, against the wishes of his wife and daughter. Silenus is a friend of Dionysus, the god of wine and celebration. Upon learning Midas’ kindness towards his friend, Dionysus decides to reward the keg.

            When asked to wish for something, Midas says “I wish everything I touch turns to gold”. Although Dionysus knew it was not a great idea, he granted Midas his wish.

            Happy that his wish was granted, Midas went around touching random things in the garden and his palace and turned them all into gold. He touched an apple, and it turned into a shiny gold apple. His subjects were astonished but happy to see so much gold in the palace.

            In his happiness, Midas went and hugged his daughter, and before he realized, he turned her into a lifeless, golden statue! Aghast, Midas ran back to the garden and called for Dionysus. He begged the god to take away his power and save his daughter. Dionysus gives Midas a solution to change everything back to how it was before the wish. Midas learned his lesson and lived the rest of his life contended with what he had.
            \n<b><big>Moral:</big></b>\n
            Do not get greedy. Be happy and content with what you have.</string>
    <string name="t2">The Golden Egg</string>
    <string name="d2"><b><h3>\t\t\t\t\t\t\t\tThe Golden Egg</h3></b>\n\n  Once upon a time, a farmer had a goose that laid a golden egg every day. The egg provided enough money for the farmer and his wife for their day-to-day needs. The farmer and his wife were happy for a long time. But one day, the farmer got an idea and thought, “Why should I take just one egg a day? Why can’t I take all of them at once and make a lot of money?”

            The foolish farmer’s wife also agreed and decided to cut the goose’s stomach for the eggs. As soon as they killed the bird and opened the goose’s stomach, to find nothing but guts and blood. The farmer, realizing his foolish mistake, cries over the lost resource!

            The English idiom “kill not the goose that lays the golden egg” was also derived from this classic story.
            \n<b><big>Moral:</big></b>\n
            Think before you act.</string>
    <string name="t3">The Miser And His Gold</string>
    <string name="d3"> <b><h3>The Miser And His Gold</h3></b>\n\n  An old miser lived in a house with a garden. The miser hid his gold coins in a pit under some stones in the garden. Every day, before going to bed, the miser went to the stones where he hid the gold and counted the coins. He continued this routine every day, but not once did he spend the gold he saved.

            One day, a thief who knew the old miser’s routine, waited for the old man to go back into his house. After it was dark, the thief went to the hiding place and took the gold. The next day, the old miser found that his treasure was missing and started crying loudly.

            His neighbor heard the miser’s cries and inquired about what happened. On learning what happened, the neighbor asked, “Why didn’t you save the money inside the house? It would’ve been easier to access the money when you had to buy something!”

            “Buy?”, said the miser. “I never used the gold to buy anything. I was never going to spend it.”

            On hearing this, the neighbor threw a stone into the pit and said, “If that is the case, save the stone. It is as worthless as the gold you have lost”.
            \n<b><big>Moral:</big></b>\n
            A possession is just as worthy of what it is used for.</string>
    <string name="t4">The Boy Who Cried Wolf</string>
    <string name="d4"><b><h3>The Boy Who Cried Wolf</h3></b>\n\n  Once upon a time, there lived a shepherd boy who was bored watching his flock of sheep on the hill. To amuse himself, he shouted, “Wolf! Wolf! The sheep are being chased by the wolf!” The villagers came running to help the boy and save the sheep. They found nothing and the boy just laughed looking at their angry faces.

            “Don’t cry ‘wolf’ when there’s no wolf boy!”, they said angrily and left. The boy just laughed at them.

            After a while, he got bored and cried ‘wolf!’ again, fooling the villagers a second time. The angry villagers warned the boy a second time and left. The boy continued watching the flock. After a while, he saw a real wolf and cried loudly, “Wolf! Please help! The wolf is chasing the sheep. Help!”

            But this time, no one turned up to help. By evening, when the boy didn’t return home, the villagers wondered what happened to him and went up the hill. The boy sat on the hill weeping. “Why didn’t you come when I called out that there was a wolf?” he asked angrily. “The flock is scattered now”, he said.
            \n<b><big>Moral:</big></b>\n
            Lying breaks trust. Nobody trusts a liar, even when he is telling the truth.</string>
    <string name="t5">The Tortoise And The Bird</string>
    <string name="d5"><b><h3>The Tortoise And The Bird</h3></b>\n\n  A tortoise was resting under a tree, on which a bird had built its nest. The tortoise spoke to the bird mockingly, “What a shabby home you have! It is made of broken twigs, it has no roof, and looks crude. What’s worse is that you had to build it yourself. I think my house, which is my shell, is much better than your pathetic nest”.

            “Yes, it is made of broken sticks, looks shabby and is open to the elements of nature. It is crude, but I built it, and I like it.”

            “I guess it’s just like any other nest, but not better than mine”, said the tortoise. “You must be jealous of my shell, though.”

            “On the contrary”, the bird replied. “My home has space for my family and friends; your shell cannot accommodate anyone other than you. Maybe you have a better house. But I have a better home”, said the bird happily.
            \n<b><big>Moral:</big></b>\n
            Better a crowded hut than a lonely mansion.</string>
    <string name="t6">The Cows And The Tiger</string>
    <string name="d6"><b><h3>The Cows And The Tiger</h3></b>\n\n  Four cows lived in a forest near a meadow. They were good friends and did everything together. They grazed together and stayed together, because of which no tigers or lions were able to kill them for food.

            But one day, the friends fought and each cow went to graze in a different direction. A tiger and a lion saw this and decided that it was the perfect opportunity to kill the cows. They hid in the bushes and surprised the cows and killed them all, one by one.

           \n<b><big>Moral:</big></b>\n
            Unity is strength.</string>
    <string name="t7">The Four Students</string>
    <string name="d7"><b><h3>\t\t\t\t\t\t\tThe Four Students</h3></b>\n\n  There were four friends who hated studying. They partied all night before their exams and planned to skip the test by lying to the professor. So they went to the dean and told him that they had been to a wedding the previous night and on their way back, they had a flat tire. They continued to say that they had to push the car all the way back, as they didn’t have a spare tire and hence, were not in a position to write the exam.

            The dean listened and agreed to let them take the test on a later date. Happy that they got a second chance, the four friends studied hard and were ready for the exam. On exam day, the dean asked the students to sit in separate classrooms, which the students agreed to.

            The examination paper had only two questions, for a total of 100 marks. The questions were thus:

            \nYour name:\n
            Which tire of the car burst: a) Front left b) Front right c) Rear left d) Rear right
            \n<b><big>Moral:</big></b>\n
            You may be smart, but there are people smarter than you in the world.</string>
    <string name="t8">The Boasting Traveler </string>
    <string name="d8"><b><h3>\t\t\t\t\tThe Boasting Traveler</h3></b>\n\n  A man came back from a tour and boasted about his adventurous journeys. He talked at length about the different people he met and his amazing feats that got him fame and praise from people everywhere. He went on to say that he went to the Rhodes where he had leaped to such distances that no man could ever match his feat.

            He even went on to say that there were witnesses who would vouch for his words. Hearing the man boast so much, a smart bystander said, “Oh good man, we do not need any witnesses to believe your words. Imagine this place to be Rhodes and leap for us”.

            The lying traveler didn’t know what to do and went away quietly.

            \n<b><big>Moral:</big></b>\n
            He who does a thing well does not need to boast.</string>
    <string name="t9">The Camel And The Baby</string>
    <string name="d9"><b><h3>The Camel And The Baby</h3></b>\n\n  One day, a camel and her baby were chatting. The baby asked, “Mother, why do we have humps?” The mother replied, “Our humps are for storing water so that we can survive in the desert”.

            “Oh”, said the child, “and why do we have rounded feet mother?” “Because they are meant to help us walk comfortably in the desert. These legs help us move around in the sand.”

            “Alright. But why are our eyelashes so long?” “To protect our eyes from the desert dust and sand. They are the protective covers for the eyes”, replied the mother camel.

            The baby camel thought for a while and said, “So we have humps to store water for desert journeys, rounded hooves to keep us comfortable when we walk in the desert sand, and long eyelashes to protect us from sand and dust during a desert storm. Then what are we doing in a zoo?”

            The mother was dumbfounded.

            \n<b><big>Moral:</big></b>\n
            Your strengths, skills, and knowledge are useless if you are not in the right place.</string>
    <string name="t10">The Farmer And The Well</string>
</resources>